--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="assets/css/classes.css">
   <link rel="stylesheet" href="assets/css/menu.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap">
+
 
 </head>
 
@@ -25,14 +25,17 @@
   <aside class="menu white-bg">
     <div class="main-content menu-content">
       <h1 onclick="getElementById('close-menu').checked = false;">
-        <a href="#grid-two">Franca & Sodré</a>
+        <a href="#franca-sodre">Franca & Sodré</a>
       </h1>
 
       <nav>
         <ul onclick="getElementById('close-menu').checked = false;">
           <!-- <li><a href="#intro">Introdução</a></li> -->
-          <li><a href="sites.html">Artigos</a></li>
+          <li><a href="#about">Sobre o Escritório</a></li>
+          <li><a href="#franca-sodre">Quem Somos</a></li>
+          <li><a href="articles.html">Artigos</a></li>
           <li><a href="#contact">Contato</a></li>
+
         </ul>
       </nav>
     </div>
@@ -40,74 +43,54 @@
 
   <div class="menu-spacing"></div>
 
-  <section id="home" class="intro main-bg section">
+  <section id="home" class="intro book-bg section">
     <div class="logo-container">
       <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
     </div>
     <div class="main-content intro-content">
       <div class="intro-text-content">
-        <h2>F exemplo</h2>
-        <p>texto exemplo</p>
+        <h2>Fale diretamente com especialistas em Direito Civil</h2>
+
       </div>
       <div class="intro-img">
         <img src="assets/img/francasodre.jpg" class="bordered-image">
       </div>
     </div>
+    <article class="whatsapp-article">
+      <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
+        class="whatsapp-button">
+        Clique aqui!
+        <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
+      </a>
+    </article>
   </section>
 
-  <section id="intro" class="white-bg section">
+  <section id="about" class="white-bg">
     <div class="main-content top3-content">
-      <h2>título</h2>
-      <article class="whatsapp-article">
-        <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
-          class="whatsapp-button">
-          Clique aqui!
-          <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
-        </a>
-      </article>
+      <h2>SOBRE O ESCRITÓRIO</h2>
+      <p>
+        O Franca & Sodré Advocacia é um escritório encabeçado por advogadas de excelência. Sua sede está localizada na
+        cidade de Aracaju, com atuação em todo o país, mediante o auxílio dos meios tecnológicos.</p>
+      <br>
+      <p>
+        Atuantes na área do Direito Civil, em várias das suas ramificações, com destaque para o direito do consumidor,
+        direito imobiliário, direito das famílias e direito à saúde, dentre outras.
+        <a href="#AreasOfExpertise">CLIQUE AQUI E VEJA AS ÁREAS DE ATUAÇÃO</a>
+      </p>
+      <br>
+      <p>Com advogadas dotadas de amplo conhecimento sobre o direito e o processo civil, somados à experiência na área e
+        ao
+        atendimento personalizado e humanizado, não há dúvidas de que este escritório lhe trará a melhor solução para o
+        seu problema, com ética, responsabilidade e transparência.
+      </p>
     </div>
+
   </section>
 
 
-  <section id="grid-one" class="grid-one main-bg section">
-    <div class="main-content grid-one-content">
-      <h2 class="grid-main-heading">texto</h2>
-      <br>
-      <p>texto</p>
-      <br>
-      <h2>texto</h2>
-
-      <div class="grid">
-        <div class="trafego-img">
-          <img src="assets/img/marketing.svg" alt="">
-        </div>
-
-        <article>
-          <h3>titulo</h3>
-          <p>texto</p>
-        </article>
-
-        <article>
-          <h3>título</h3>
-          <p>texto</p>
-        </article>
-
-        <article class="whatsapp-article">
-          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
-            target="_blank" class="whatsapp-button">
-            Clique aqui!
-            <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
-          </a>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <section id="grid-two" class="main-bg section">
+  <section id="franca-sodre" class="book-bg section">
     <br>
     <br>
-    <br>
-    
     <div class="logo-container">
       <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
     </div>
@@ -117,24 +100,58 @@
         <img class="bordered-image" src="assets/img/mariana 2.jpg">
       </div>
       <article>
+        <h4>MARIANA FRANCA – ADVOGADA - OAB/SE 12.930</h4>
+        <p>Advogada com atuação voltada ao direito civil e responsável pelas pautas do escritório relativas a direito do
+          consumidor, ações indenizatórias, mandados de segurança, ações de família, envolvendo bens imóveis e demandas
+          relativas aos direitos LGBTQIA+.</p>
         <br>
-        <p>É melhor a imagem na esquerda e o texto na direita? (versão pc)</p>
+        <p>Conhecedora do Direito e Processo Civil, possui ampla experiência nas demandas de consumo, já que iniciou sua
+          carreira no meio jurídico ainda antes de formada, atuando em todos os setores do Procon Estadual de Sergipe,
+          possuindo, atualmente, vasta experiência em ações indenizatórias por danos materiais e morais.</p>
+        <br>
+        <p>Membra da Comissão de Diversidade Sexual e de Gênero da OAB/SE, é incisiva na defesa dos direitos de grupos
+          vulneráveis de maneira geral.</p>
 
-        <p>---Na versão mobile, a foto fica em cima e o texto embaixo.---</p>
+      </article>
+      <article class="whatsapp-article">
+        <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
+          target="_blank" class="whatsapp-button">
+          Clique aqui!
+          <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
+        </a>
       </article>
     </div>
 
     <div class="main-content intro-content">
-      <div class="intro-text-content">
-        <br>
-        <p>Ou o texto na esquerda e a imagem na direita? (versão pc)</p>
-        <p>Ou os dois?</p>
-        <p>---Na versão mobile, a foto fica em cima e o texto embaixo.---</p>
-      </div>
+
       <div class="person-img">
         <img src="assets/img/emille 2.jpg" class="bordered-image">
       </div>
-
+      <div class="intro-text-content">
+        <h4>ÉMILLY SODRÉ – ADVOGADA – OAB/SE 11.780</h4>
+        <p>Advogada com atuação voltada ao direito civil e responsável pelas pautas do escritório relativas ao direito à
+          saúde, em especial ações contra planos de saúde, além das ações de família, ações indenizatórias derivadas das
+          relações de consumo, cumprimento de sentença e execuções, além de demandas complexas, que envolvem mais de uma
+          área do direito.</p>
+        <p>Possui ampla experiência acadêmica, tendo participado da iniciação científica desde o 5º período do curso de
+          Direito e publicado, desde então, inúmeros trabalhos científicos, além de ter participado de vários eventos.
+          Atualmente, encontra-se em fase conclusiva do mestrado em Direitos Humanos, pela Universidade Tiradentes, em
+          Aracaju/SE. Essa experiência lhe concede habilidades discursivas e argumentativas que formam o seu diferencial
+          enquanto advogada.</p>
+        <br>
+        <p>
+          Já na prática forense, realizou estágio em escritório de advocacia, adquirindo experiência estratégica na
+          condução dos processos. Após formada, passou a atuar por conta própria nas áreas de direito civil e direito
+          penal, tendo afunilado seu interesse profissional na área de direito à saúde, com ênfase nos direitos dos
+          autistas, além das demandas que envolvem direito das famílias.
+        </p>
+        <br>
+        <p>
+          Membra da Comissão de Defesa dos Direitos da Mulher da OAB/SE desde 2022, Dra. Émilly participa ativamente nos
+          Grupos de Trabalho de Pesquisa, Mulheres Encarceradas e Informativos, todos em função da defesa dos direitos
+          das mulheres, sendo sensível à causa.
+        </p>
+      </div>
 
       <article class="whatsapp-article">
         <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
@@ -147,16 +164,26 @@
     </div>
   </section>
 
+  <section id="AreasOfExpertise" class="gold-bg section">
+    <div class="main-content top3-content">
+      <h2>Nosso Diferencial</h2>
+
+    </div>
+  </section>
+  <section id="AreasOfExpertise" class="book-bg section">
+    <div class="main-content top3-content">
+      <h2>ÁREAS DE ATUAÇÃO</h2>
+
+    </div>
+  </section>
+
   <section id="contact" class="white-bg section">
     <div class="main-content top3-content">
-
+      <h3>Contato</h3>
       <iframe
         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15670.489441278765!2d-37.0492687!3d-10.9162779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab39b4e7274d5%3A0x1c6932ba8ee329de!2sFranca%20%26%20Sodr%C3%A9%20Advocacia%20e%20Consultoria%20Jur%C3%ADdica!5e0!3m2!1spt-BR!2sbr!4v1708014826066!5m2!1spt-BR!2sbr"
         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"></iframe>
-
-
-
       <br>
 
       <article class="whatsapp-article">
