--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <title>Franca & Sodré</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
-    rel="stylesheet">
   <link rel="stylesheet" href="assets/css/variables.css">
   <link rel="stylesheet" href="assets/css/elements.css">
   <link rel="stylesheet" href="assets/css/classes.css">
   <link rel="stylesheet" href="assets/css/menu.css">
   <link rel="stylesheet" href="assets/css/styles.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+    rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet">
 
 </head>
 
@@ -49,20 +52,20 @@
     </div>
     <div class="main-content intro-content">
       <div class="intro-text-content">
-        <h2>Fale diretamente com especialistas em Direito Civil</h2>
-
+        <h2 class="open-sans-intro">Fale diretamente com especialistas em Direito Civil</h2>
+        <article class="whatsapp-article">
+          <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
+            class="whatsapp-button">
+            Clique aqui!
+            <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
+          </a>
+        </article>
       </div>
       <div class="intro-img">
         <img src="assets/img/francasodre.jpg" class="bordered-image">
       </div>
     </div>
-    <article class="whatsapp-article">
-      <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
-        class="whatsapp-button">
-        Clique aqui!
-        <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
-      </a>
-    </article>
+
   </section>
 
   <section id="about" class="white-bg">
@@ -111,14 +114,14 @@
         <br>
         <p>Membra da Comissão de Diversidade Sexual e de Gênero da OAB/SE, é incisiva na defesa dos direitos de grupos
           vulneráveis de maneira geral.</p>
-
-      </article>
-      <article class="whatsapp-article">
-        <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
-          target="_blank" class="whatsapp-button">
-          Clique aqui!
-          <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
-        </a>
+        <br>
+        <article class="whatsapp-article">
+          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
+            target="_blank" class="whatsapp-button">
+            Clique aqui!
+            <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
+          </a>
+        </article>
       </article>
     </div>
 
@@ -151,15 +154,17 @@
           Grupos de Trabalho de Pesquisa, Mulheres Encarceradas e Informativos, todos em função da defesa dos direitos
           das mulheres, sendo sensível à causa.
         </p>
+        <br>
+        <article class="whatsapp-article">
+          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
+            target="_blank" class="whatsapp-button">
+            Clique aqui!
+            <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
+          </a>
+        </article>
       </div>
 
-      <article class="whatsapp-article">
-        <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
-          target="_blank" class="whatsapp-button">
-          Clique aqui!
-          <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
-        </a>
-      </article>
+
 
     </div>
   </section>
