--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
-
 </head>
 
 <body>
@@ -68,8 +67,8 @@
 
   </section>
 
-  <section id="about" class="white-bg">
-    <div class="main-content top3-content">
+  <section id="about" class="gold-bg">
+    <div class="main-content">
       <h2>SOBRE O ESCRITÓRIO</h2>
       <p>
         O Franca & Sodré Advocacia é um escritório encabeçado por advogadas de excelência. Sua sede está localizada na
@@ -78,7 +77,7 @@
       <p>
         Atuantes na área do Direito Civil, em várias das suas ramificações, com destaque para o direito do consumidor,
         direito imobiliário, direito das famílias e direito à saúde, dentre outras.
-        <a href="#AreasOfExpertise">CLIQUE AQUI E VEJA AS ÁREAS DE ATUAÇÃO</a>
+        <a class="link" href="#AreasOfExpertise">CLIQUE AQUI E VEJA AS ÁREAS DE ATUAÇÃO</a>
       </p>
       <br>
       <p>Com advogadas dotadas de amplo conhecimento sobre o direito e o processo civil, somados à experiência na área e
@@ -169,28 +168,197 @@
     </div>
   </section>
 
-  <section id="AreasOfExpertise" class="gold-bg section">
-    <div class="main-content top3-content">
+  <section id="diferential" class="gold-bg">
+    <div class="main-content">
       <h2>Nosso Diferencial</h2>
+      <div class="grid">
+        <div class="personalized-card ">
+          <p><strong>Atendimento Personalizado</strong></p>
+          <br>
+          <p>
+            Com atendimentos Presenciais e On-line, os clientes possuem contato direto com Dra. Mariana Franca e Dra.
+            Emilly Sodré, de forma humanizada e adaptada às suas necessidades.</p>
+        </div>
+        <div class="personalized-card ">
+          <p><strong>Defesa aguerrida</strong></p>
+          <br>
+          <p>Ter nossas advogadas como suas defensoras é a certeza de que o seu direito será
+            defendido com resistência e intensidade até o último ato, visto que temos a convicção de que cada cliente
+            tem suas dores e necessidades. A realização do cliente é a nossa realização.</p>
+        </div>
+        <div class="personalized-card ">
+          <P><strong>Transparência e Ética na solução dos conflitos</strong></P>
+          <br>
+          <p>Buscamos esclarecer o seu direito de maneira simples e
+            intuitiva, de tal forma que a complexidade do direito se torne compreensível. Você tem o direito de entender
+            o que se passa com o seu processo. Além disto, buscamos manter os clientes sempre bem informados sobre
+            valores e serviços, bem como o andamento e os próximos passos do seu processo.
 
+          </p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <section id="AreasOfExpertise" class="book-bg ">
+    <div class="main-content">
+      <h2 class="h2-gold">ÁREAS DE ATUAÇÃO</h2>
+      <div class="grid">
+        <div class="personalized-card2 ">
+          <p><strong>I. FAMÍLIAS E SUCESSÕES</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Registro Civil (alteração, restauração e retificação)<br>
+            - Divórcio consensual ou litigioso<br>
+            - Reconhecimento e Dissolução de União Estável, inclusive post mortem<br>
+            - Adoção<br>
+            - Reconhecimento de Paternidade/Maternidade, via DNA ou socioafetiva<br>
+            - Guarda de Filhos e Regulamentação de Visitas<br>
+            - Pensão Alimentícia<br>
+            - Partilha de Bens<br>
+            - Alvará judicial para acesso a contas e bens de pessoa falecida<br>
+            - Inventário<br>
+            - Testamentos<br>
+            - Interdição
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>II. DIREITO DO CONSUMIDOR</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Negativações indevidas<br>
+            - Indenizatórias<br>
+            - Danos morais<br>
+            - Danos materiais<br>
+            - Contratos abusivos<br>
+            - Garantia e Seguros<br>
+            - Seguro DPVAT<br>
+            - Rescisão de contrato
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>III. DIREITO BANCÁRIO</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Revisão de Juros<br>
+            - Contratos Abusivos<br>
+            - Empréstimos Abusivos
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>IV. DIREITO À SAÚDE</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Médicos, Planos de Saúde e SUS<br>
+            - Dano Moral por negligência ou omissão<br>
+            - Negativa de tratamentos, que constam ou não no Rol da ANS<br>
+            - Fornecimento de medicamentos de alto custo, incluindo cannabis medicinal<br>
+            - Má prestação do serviço<br>
+            - Revisão de valores abusivos de plano de saúde, em parcelas, franquias ou coparticipação<br>
+            - Direitos dos Autistas<br>
+            - Violação dos direitos do paciente
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>V. DIREITO IMOBILIÁRIO</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Registro de imóvel<br>
+            - Usucapião<br>
+            - Ação de Despejo<br>
+            - Ações de proteção da posse e da propriedade<br>
+            - Ação de Reintegração da Posse<br>
+            - Interdito Proibitório<br>
+            - Ação de Manutenção da Posse<br>
+            - Ação Reivindicatória<br>
+            - Atraso na entrega do imóvel<br>
+            - Distratos imobiliários<br>
+            - Direito condominial
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>VI. DIREITOS LGBTQIA+</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Indenizatórias por crime de LGBTFOBIA<br>
+            - Proteção de dados sensíveis<br>
+            - Adoção<br>
+            - Registro de parentalidade em procedimentos de inseminação artificial<br>
+            - Ações de dupla paternidade ou maternidade<br>
+            - Retificação de nome e gênero de pessoas Trans<br>
+            - Acesso à saúde
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong>VII. DIREITO DOS AUTISTAS – Situações que geram processo</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph"><strong>Direito à saúde:</strong><br>
+            - Negativa de tratamentos alternativos<br>
+            - Negativa de fornecimento de medicamentos de alto custo – cannabis medicinal<br>
+            - Limitação de sessões nos tratamentos<br>
+            - Negativa de tratamento no método de escolha do profissional
+            - Negativa de reembolso dos procedimentos
+          </p>
+          <br>
+          <p class="hidden-paragraph"><strong>Direito à educação:</strong><br>
+            - Negativa da escola em disponibilizar professor auxiliar para o aluno com TEA ou cobrança de valores para
+            arcar com esse profissional<br>
+            - Negativa de matrícula em escola pública ou particular
+          </p>
+
+
+        </div>
+        <div class="personalized-card2 ">
+          <p><strong> VIII. CONTRATOS E RELAÇÕES CONTRATUAIS</strong></p>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Elaboração de contratos profissionais<br>
+            - Execução de Título Executivo<br>
+            - Ação Monitória<br>
+            - Descumprimento contratual<br>
+            - Rescisão Contratual e Distrato<br>
+            - Notificação Extrajudicial
+          </p>
+
+        </div>
+        <div class="personalized-card2 ">
+          <P><strong>IX. OUTROS SERVIÇOS</strong></P>
+          <br>
+          <p class="p-detail"> Mais detalhes aqui!</p>
+          <br>
+          <p class="hidden-paragraph">- Consultoria jurídica<br>
+            - Relatórios e Pareceres jurídicos (análise processual)<br>
+            - Advocacia Extrajudicial<br>
+            - Acompanhamento de Processos<br>
+            - Acompanhamento em audiência<br>
+            - Acompanhamento em execução penal (pedido de saída temporária, progressão de regime, remição, etc)<br>
+            - Dentre outros
+          </p>
+
+        </div>
+      </div>
     </div>
   </section>
-  <section id="AreasOfExpertise" class="book-bg section">
-    <div class="main-content top3-content">
-      <h2>ÁREAS DE ATUAÇÃO</h2>
 
-    </div>
-  </section>
-
-  <section id="contact" class="white-bg section">
-    <div class="main-content top3-content">
-      <h3>Contato</h3>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15670.489441278765!2d-37.0492687!3d-10.9162779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab39b4e7274d5%3A0x1c6932ba8ee329de!2sFranca%20%26%20Sodr%C3%A9%20Advocacia%20e%20Consultoria%20Jur%C3%ADdica!5e0!3m2!1spt-BR!2sbr!4v1708014826066!5m2!1spt-BR!2sbr"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
-      <br>
-
+  <section id="contact" class="white-bg">
+    <div class="main-content">
+      <h2 class="h-gold">TIRE SUA DÚVIDA AGORA MESMO</h2>
       <article class="whatsapp-article">
         <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
           target="_blank" class="whatsapp-button">
@@ -198,12 +366,26 @@
           <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
         </a>
       </article>
-
+      <br>
+      <br>
+      <br>
+      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+      <div class="elfsight-app-0a45f684-1b9c-4516-acb8-8c25f055c9eb" data-elfsight-app-lazy></div>
+      <br>
+      <h5 class="h-gold"> (79) 9 9916-3556</h5>
+      <h5 class="h-gold"> (79) 9 9122-0264</h5>
+      <h5 class="h-gold"> Rua Pacatuba, 254, Sala 1106, Centro, Aracaju/SE.</h5>
+      <br>
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15670.489441278765!2d-37.0492687!3d-10.9162779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab39b4e7274d5%3A0x1c6932ba8ee329de!2sFranca%20%26%20Sodr%C3%A9%20Advocacia%20e%20Consultoria%20Jur%C3%ADdica!5e0!3m2!1spt-BR!2sbr!4v1708014826066!5m2!1spt-BR!2sbr"
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <br>
     </div>
   </section>
 
-  <footer id="footer" class="footer white-bg">
-    <p><a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/ariellopes-developer/">Feito com <span
+  <footer id="footer" class="footer">
+    <p><a rel="nofollow" target="_blank" href="https://ariellisboa.netlify.app/sites">Feito com <span
           class="heart">❤</span> por Ariel Lisboa</a></p>
   </footer>
   <a class="back-to-top" href="#">➤</a>
