--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <!-- <li><a href="#intro">Introdução</a></li> -->
           <li><a href="#about">Sobre o Escritório</a></li>
           <li><a href="#franca-sodre">Quem Somos</a></li>
-          <li><a href="articles.html">Artigos</a></li>
+          <li><a href="researches.html">Artigos</a></li>
           <li><a href="#contact">Contato</a></li>
 
         </ul>
@@ -355,6 +355,23 @@
       </div>
     </div>
   </section>
+  <section id="researche" class="gold-bg">
+    <div class="main-content">
+      <h3>LEIA NOSSOS MELHORES ARTIGOS E FIQUE POR DENTRO DOS SEUS DIREITOS:</h3>
+      <br>
+      <div class="grid">
+        <div class="personalized-card ">
+          <p><strong>Artigo 1</strong></p>
+        </div>
+        <div class="personalized-card ">
+          <p><strong>Artigo 2</strong></p>
+        </div>
+        <div class="personalized-card ">
+          <P><strong>Artigo 3</strong></P>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section id="contact" class="white-bg">
     <div class="main-content">
@@ -374,6 +391,7 @@
       <br>
       <h5 class="h-gold"> (79) 9 9916-3556</h5>
       <h5 class="h-gold"> (79) 9 9122-0264</h5>
+      <br>
       <h5 class="h-gold"> Rua Pacatuba, 254, Sala 1106, Centro, Aracaju/SE.</h5>
       <br>
       <iframe
