--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
       <div class="intro-text-content">
         <h4>ÉMILLY SODRÉ – ADVOGADA – OAB/SE 11.780</h4>
         <p>Advogada com atuação voltada ao direito civil e responsável pelas pautas do escritório relativas ao direito à
-          saúde, em especial ações contra planos de saúde, além das ações de família, ações indenizatórias derivadas das
-          relações de consumo, cumprimento de sentença e execuções, além de demandas complexas, que envolvem mais de uma
-          área do direito.</p>
-        <p>Possui ampla experiência acadêmica, tendo participado da iniciação científica desde o 5º período do curso de
-          Direito e publicado, desde então, inúmeros trabalhos científicos, além de ter participado de vários eventos.
+          saúde, em especial ações contra planos de saúde, além das ações de família, indenizatórias derivadas das
+          relações de consumo, cumprimento de sentença e execuções, e demandas complexas, que envolvem mais de uma área
+          do direito.</p>
+          <br>
+        <p>Possui ampla experiência acadêmica, com inúmeros trabalhos científicos publicados e participação em eventos.
           Atualmente, encontra-se em fase conclusiva do mestrado em Direitos Humanos, pela Universidade Tiradentes, em
           Aracaju/SE. Essa experiência lhe concede habilidades discursivas e argumentativas que formam o seu diferencial
           enquanto advogada.</p>
@@ -149,9 +149,8 @@
         </p>
         <br>
         <p>
-          Membra da Comissão de Defesa dos Direitos da Mulher da OAB/SE desde 2022, Dra. Émilly participa ativamente nos
-          Grupos de Trabalho de Pesquisa, Mulheres Encarceradas e Informativos, todos em função da defesa dos direitos
-          das mulheres, sendo sensível à causa.
+          Membra da Comissão de Defesa dos Direitos da Mulher e da Comissão de Direitos Humanos da OAB/SE desde 2022,
+          sendo militante nestas áreas.
         </p>
         <br>
         <article class="whatsapp-article">
