--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
   <section id="home" class="intro book-bg section">
     <div class="logo-container">
-      <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
+      <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
     <div class="main-content intro-content">
       <div class="intro-text-content">
@@ -61,7 +61,7 @@
         </article>
       </div>
       <div class="intro-img">
-        <img src="assets/img/francasodre.jpg" class="bordered-image">
+        <img src="assets/img/franca&sodre.jpg" class="bordered-image">
       </div>
     </div>
 
@@ -94,12 +94,12 @@
     <br>
     <br>
     <div class="logo-container">
-      <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
+      <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
 
     <div class="main-content intro-content">
       <div class="person-img">
-        <img class="bordered-image" src="assets/img/mariana 2.jpg">
+        <img class="bordered-image" src="assets/img/mariana.jpg">
       </div>
       <article>
         <h4>MARIANA FRANCA – ADVOGADA - OAB/SE 12.930</h4>
@@ -127,7 +127,7 @@
     <div class="main-content intro-content">
 
       <div class="person-img">
-        <img src="assets/img/emille 2.jpg" class="bordered-image">
+        <img src="assets/img/emille.jpg" class="bordered-image">
       </div>
       <div class="intro-text-content">
         <h4>ÉMILLY SODRÉ – ADVOGADA – OAB/SE 11.780</h4>
