adjustments to the menu, articles and resume

--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
   <aside class="menu white-bg">
     <div class="main-content menu-content">
       <h1 onclick="getElementById('close-menu').checked = false;">
-        <a href="#franca-sodre">Franca & Sodré</a>
+        <!-- <a href="#franca-sodre">Franca & Sodré</a> -->
       </h1>
 
       <nav>
         <ul onclick="getElementById('close-menu').checked = false;">
-          <!-- <li><a href="#intro">Introdução</a></li> -->
           <li><a href="#about">Sobre o Escritório</a></li>
           <li><a href="#franca-sodre">Quem Somos</a></li>
           <li><a href="researches.html">Artigos</a></li>
@@ -47,7 +46,7 @@
 
   <section id="home" class="intro book-bg section">
     <div class="logo-container">
-      <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
+      <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
     <div class="main-content intro-content">
       <div class="intro-text-content">
@@ -61,7 +60,7 @@
         </article>
       </div>
       <div class="intro-img">
-        <img src="assets/img/francasodre.jpg" class="bordered-image">
+        <img src="assets/img/franca&sodre.jpg" class="bordered-image">
       </div>
     </div>
 
@@ -94,25 +93,22 @@
     <br>
     <br>
     <div class="logo-container">
-      <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
+      <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
 
     <div class="main-content intro-content">
       <div class="person-img">
-        <img class="bordered-image" src="assets/img/mariana 2.jpg">
+        <img class="bordered-image" src="assets/img/mariana.jpg">
       </div>
       <article>
         <h4>MARIANA FRANCA – ADVOGADA - OAB/SE 12.930</h4>
-        <p>Advogada com atuação voltada ao direito civil e responsável pelas pautas do escritório relativas a direito do
-          consumidor, ações indenizatórias, mandados de segurança, ações de família, envolvendo bens imóveis e demandas
-          relativas aos direitos LGBTQIA+.</p>
+        <p>• Advogada com atuação voltada ao direito civil, de família, relacionado a bens imóveis e demandas relativas
+          aos direitos LGBTQIA+;</p>
         <br>
-        <p>Conhecedora do Direito e Processo Civil, possui ampla experiência nas demandas de consumo, já que iniciou sua
-          carreira no meio jurídico ainda antes de formada, atuando em todos os setores do Procon Estadual de Sergipe,
-          possuindo, atualmente, vasta experiência em ações indenizatórias por danos materiais e morais.</p>
+        <p>• Ampla experiência nas demandas de consumo, tendo atuado como estagiária em todos os setores do Procon
+          Estadual de Sergipe;</p>
         <br>
-        <p>Membra da Comissão de Diversidade Sexual e de Gênero da OAB/SE, é incisiva na defesa dos direitos de grupos
-          vulneráveis de maneira geral.</p>
+        <p>• Membra da Comissão de Diversidade Sexual e de Gênero da OAB/SE</p>
         <br>
         <article class="whatsapp-article">
           <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
@@ -127,29 +123,19 @@
     <div class="main-content intro-content">
 
       <div class="person-img">
-        <img src="assets/img/emille 2.jpg" class="bordered-image">
+        <img src="assets/img/emille.jpg" class="bordered-image">
       </div>
       <div class="intro-text-content">
         <h4>ÉMILLY SODRÉ – ADVOGADA – OAB/SE 11.780</h4>
-        <p>Advogada com atuação voltada ao direito civil e responsável pelas pautas do escritório relativas ao direito à
-          saúde, em especial ações contra planos de saúde, além das ações de família, indenizatórias derivadas das
-          relações de consumo, cumprimento de sentença e execuções, e demandas complexas, que envolvem mais de uma área
-          do direito.</p>
-          <br>
-        <p>Possui ampla experiência acadêmica, com inúmeros trabalhos científicos publicados e participação em eventos.
-          Atualmente, encontra-se em fase conclusiva do mestrado em Direitos Humanos, pela Universidade Tiradentes, em
-          Aracaju/SE. Essa experiência lhe concede habilidades discursivas e argumentativas que formam o seu diferencial
-          enquanto advogada.</p>
+        <p>• Advogada com atuação voltada ao direito civil, direito à saúde e demandas complexas;</p>
+        <br>
+        <p>• Ampla experiência acadêmica, com inúmeros trabalhos científicos publicados e participação em eventos;</p>
         <br>
         <p>
-          Já na prática forense, realizou estágio em escritório de advocacia, adquirindo experiência estratégica na
-          condução dos processos. Após formada, passou a atuar por conta própria nas áreas de direito civil e direito
-          penal, tendo afunilado seu interesse profissional na área de direito à saúde, com ênfase nos direitos dos
-          autistas, além das demandas que envolvem direito das famílias.
-        </p>
+          • Mestranda em Direitos Humanos, pela Universidade Tiradentes, em Aracaju/SE;</p>
         <br>
         <p>
-          Membra da Comissão de Defesa dos Direitos da Mulher e da Comissão de Direitos Humanos da OAB/SE desde 2022,
+          • Membra da Comissão de Defesa dos Direitos da Mulher e da Comissão de Direitos Humanos da OAB/SE desde 2022,
           sendo militante nestas áreas.
         </p>
         <br>
@@ -360,13 +346,28 @@
       <br>
       <div class="grid">
         <div class="personalized-card ">
-          <p><strong>Artigo 1</strong></p>
+          <div>
+            <img src="assets/img/v.jpg" class="bordered-image-researche">
+          </div>
+          <br>
+          <p><strong>Título do Artigo</strong></p>
+          <p>Este é um parágrafo exemplo, para ler mais <a class="link" href="researches.html">clique aqui!</a></p>
         </div>
         <div class="personalized-card ">
-          <p><strong>Artigo 2</strong></p>
+          <div>
+            <img src="assets/img/researches3.jpg" class="bordered-image-researche">
+          </div>
+          <br>
+          <p><strong>Título do Artigo</strong></p>
+          <p>Este é um parágrafo exemplo, para ler mais <a class="link" href="researches.html">clique aqui!</a></p>
         </div>
         <div class="personalized-card ">
-          <P><strong>Artigo 3</strong></P>
+          <div>
+            <img src="assets/img/researches2.jpg" class="bordered-image-researche">
+          </div>
+          <br>
+          <p><strong>Título do Artigo</strong></p>
+          <p>Este é um parágrafo exemplo, para ler mais <a class="link" href="researches.htmls">clique aqui!</a></p>
         </div>
       </div>
     </div>
