--- a/researches.html
+++ b/researches.html
@@ -44,7 +44,7 @@
 
   <section id="home" class="book-bg">
     <div class="logo-container">
-      <img class="logo-img" src="assets/img/logo png.png" alt="Logo">
+      <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
     <div class="main-content" >
       <div class="main-content">
