--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <img class="bordered-image" src="assets/img/mariana.jpg">
       </div>
       <article>
-        <h4>MARIANA FRANCA – ADVOGADA - OAB/SE 12.930</h4>
+        <h4>Dra. MARIANA FRANCA</h4>
         <p>• Advogada com atuação voltada ao direito civil, de família, relacionado a bens imóveis e demandas relativas
           aos direitos LGBTQIA+;</p>
         <br>
@@ -126,7 +126,7 @@
         <img src="assets/img/emille.jpg" class="bordered-image">
       </div>
       <div class="intro-text-content">
-        <h4>ÉMILLY SODRÉ – ADVOGADA – OAB/SE 11.780</h4>
+        <h4>Dra. ÉMILLY SODRÉ</h4>
         <p>• Advogada com atuação voltada ao direito civil, direito à saúde e demandas complexas;</p>
         <br>
         <p>• Ampla experiência acadêmica, com inúmeros trabalhos científicos publicados e participação em eventos;</p>
@@ -191,7 +191,7 @@
       <h2 class="h2-gold">ÁREAS DE ATUAÇÃO</h2>
       <div class="grid">
         <div class="personalized-card2 ">
-          <p><strong>I. FAMÍLIAS E SUCESSÕES</strong></p>
+          <p><strong>FAMÍLIAS E SUCESSÕES</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -211,7 +211,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>II. DIREITO DO CONSUMIDOR</strong></p>
+          <p><strong>DIREITO DO CONSUMIDOR</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -227,7 +227,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>III. DIREITO BANCÁRIO</strong></p>
+          <p><strong>DIREITO BANCÁRIO</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -238,7 +238,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>IV. DIREITO À SAÚDE</strong></p>
+          <p><strong>DIREITO À SAÚDE</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -254,7 +254,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>V. DIREITO IMOBILIÁRIO</strong></p>
+          <p><strong>DIREITO IMOBILIÁRIO</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -273,7 +273,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>VI. DIREITOS LGBTQIA+</strong></p>
+          <p><strong>DIREITOS LGBTQIA+</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -288,7 +288,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>VII. DIREITO DOS AUTISTAS – Situações que geram processo</strong></p>
+          <p><strong>DIREITO DOS AUTISTAS – Situações que geram processo</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -309,7 +309,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong> VIII. CONTRATOS E RELAÇÕES CONTRATUAIS</strong></p>
+          <p><strong>CONTRATOS E RELAÇÕES CONTRATUAIS</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -323,7 +323,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <P><strong>IX. OUTROS SERVIÇOS</strong></P>
+          <P><strong>OUTROS SERVIÇOS</strong></P>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
