--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ivy+Mode&display=swap">
+
 </head>
 
 <body>
 
   <input id="close-menu" class="close-menu" type="checkbox" aria-label="Close menu" role="button">
   <label class="close-menu-label" for="close-menu" title="close menu"></label>
-  <aside class="menu white-bg">
+  <aside class="menu gold-bg">
     <div class="main-content menu-content">
       <h1 onclick="getElementById('close-menu').checked = false;">
         <!-- <a href="#franca-sodre">Franca & Sodré</a> -->
@@ -48,9 +50,13 @@
     <div class="logo-container">
       <img class="logo-img" src="assets/img/logo.png" alt="Logo">
     </div>
-    <div class="main-content intro-content">
-      <div class="intro-text-content">
-        <h1 class="open-sans-intro">Fale diretamente com especialistas em Direito Civil</h1>
+    <div class="main-content">
+      <div>
+        <br>
+        <br>
+        <h1>Profissionais de excelência que podem atuar por você com eficácia, respeito e
+          transparência.</h1>
+        <br>
         <article class="whatsapp-article">
           <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
             class="whatsapp-button">
@@ -58,9 +64,6 @@
             <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
           </a>
         </article>
-      </div>
-      <div class="intro-img">
-        <img src="assets/img/franca&sodre.jpg" class="bordered-image">
       </div>
     </div>
 
@@ -288,7 +291,7 @@
 
         </div>
         <div class="personalized-card2 ">
-          <p><strong>DIREITO DOS AUTISTAS – Situações que geram processo</strong></p>
+          <p><strong>DIREITO DOS AUTISTAS</strong></p>
           <br>
           <p class="p-detail"> Mais detalhes aqui!</p>
           <br>
@@ -374,8 +377,8 @@
   </section>
 
   <section id="contact" class="white-bg">
-    <div class="main-content">
-      <h2 class="h-gold">TIRE SUA DÚVIDA AGORA MESMO</h2>
+    <div class="contact-title-content">
+      <h2>TIRE SUA DÚVIDA AGORA MESMO</h2>
       <article class="whatsapp-article">
         <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
           target="_blank" class="whatsapp-button">
@@ -389,15 +392,25 @@
       <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
       <div class="elfsight-app-0a45f684-1b9c-4516-acb8-8c25f055c9eb" data-elfsight-app-lazy></div>
       <br>
-      <h5 class="h-gold"> (79) 9 9916-3556</h5>
-      <h5 class="h-gold"> (79) 9 9122-0264</h5>
       <br>
-      <h5 class="h-gold"> Rua Pacatuba, 254, Sala 1106, Centro, Aracaju/SE.</h5>
-      <br>
-      <iframe
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15670.489441278765!2d-37.0492687!3d-10.9162779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab39b4e7274d5%3A0x1c6932ba8ee329de!2sFranca%20%26%20Sodr%C3%A9%20Advocacia%20e%20Consultoria%20Jur%C3%ADdica!5e0!3m2!1spt-BR!2sbr!4v1708014826066!5m2!1spt-BR!2sbr"
-        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="intro-content">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15670.489441278765!2d-37.0492687!3d-10.9162779!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab39b4e7274d5%3A0x1c6932ba8ee329de!2sFranca%20%26%20Sodr%C3%A9%20Advocacia%20e%20Consultoria%20Jur%C3%ADdica!5e0!3m2!1spt-BR!2sbr!4v1708014826066!5m2!1spt-BR!2sbr"
+          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <h3>Franca & Sodré Advocacia e Consultoria:
+          <br>
+          <br>
+          <p>Rua Pacatuba, 254, Centro, (Sala 1106), Aracaju/SE, 49.010-150
+          </p>
+          <br>
+          <p> Telefone:
+            (79) 9 9916-3556, (79) 9 9122-0264
+          </p>
+          <br>
+          <p>E-mail: emillysamita.adv@gmail.com</p>
+        </h3>
+      </div>
       <br>
     </div>
   </section>
