--- a/index.html
+++ b/index.html
@@ -376,9 +376,9 @@
     </div>
   </section>
 
-  <section id="contact" class="white-bg">
+  <section id="contact" class="blue-bg">
     <div class="contact-title-content">
-      <h2>TIRE SUA DÚVIDA AGORA MESMO</h2>
+      <h2 class="h2-contact">TIRE SUA DÚVIDA AGORA MESMO</h2>
       <article class="whatsapp-article">
         <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
           target="_blank" class="whatsapp-button">
