--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           transparência.</h1>
         <br>
         <article class="whatsapp-article">
-          <a href="https://wa.me/5579988381834?text=Ol%C3%A1%2C+gostaria+de+um+or%C3%A7amento+para+..." target="_blank"
+          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..." target="_blank"
             class="whatsapp-button">
             Clique aqui!
             <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
