--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Open+Sans:ital,wght@0,400;0,700;1,400&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ivy+Mode&display=swap">
-
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Ivy+Mode&display=swap">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-701571983"></script>
+  <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-701571983'); </script>
 </head>
 
 <body>
@@ -58,8 +60,8 @@
           transparência.</h1>
         <br>
         <article class="whatsapp-article">
-          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..." target="_blank"
-            class="whatsapp-button">
+          <a href="https://api.whatsapp.com/send?phone=5555799916355&text=Ol%C3%A1!%20Vim%20do%20google%20e%20me%20chamo..."
+            target="_blank" class="whatsapp-button">
             Clique aqui!
             <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
           </a>
