--- a/index.html
+++ b/index.html
@@ -65,6 +65,9 @@
             Clique aqui!
             <img src="assets/img/whats.svg" alt="Logo Whats" class="whatsapp-icon">
           </a>
+          <script async src="https://www.googletagmanager.com/gtag/js?id=AW-701571983"></script>
+          <script> window.dataLayer = window.dataLayer || []; function gtag() { dataLayer.push(arguments); } gtag('js', new Date()); gtag('config', 'AW-701571983'); </script>
+          </head>
         </article>
       </div>
     </div>
